Added methods (needed from projects which use Domain library), Javadoc