@@ -1,22 +1,69 @@
 package com.icx.common.base;
 
 import java.io.File;
+import java.io.FileInputStream;
 import java.io.IOException;
 import java.net.URL;
 import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Enumeration;
+import java.util.Iterator;
 import java.util.List;
+import java.util.Locale;
+import java.util.Map;
 import java.util.MissingResourceException;
 import java.util.ResourceBundle;
+import java.util.jar.Attributes;
+import java.util.jar.JarFile;
+import java.util.jar.Manifest;
 
 /**
  * Java resource helpers
  * 
  * @author baumgrai
  */
-public abstract class CResource {
+public class CResource extends Common {
+
+	// -------------------------------------------------------------------------
+	// Localized messages
+	// -------------------------------------------------------------------------
+
+	// Location and name of resource file containing localized messages
+	public static String localizedMessageFileName = null;
+
+	/**
+	 * Set location and name of resource file containing localized messages
+	 * <p>
+	 * Use '&lt;package_path&gt;.messages' if 'messages_&lt;locale&gt;.properties' files exist in package &lt;package_path&gt;.
+	 * 
+	 * @param qualifiedPackagePath
+	 *            fully qualified base name of localized message file (e.g. 'de.icx.v4j.app.xxx.i18n.messages')
+	 */
+	public static void setLocalizedMessageFileName(String qualifiedPackagePath) {
+		localizedMessageFileName = qualifiedPackagePath;
+	}
+
+	/**
+	 * Get resource bundle for locale (for localized text messages)
+	 * 
+	 * @param locale
+	 *            locale for localization
+	 * 
+	 * @return resource bundle for given locale
+	 */
+	public static ResourceBundle getBundleForLocale(Locale locale) {
+
+		if (locale == null || localizedMessageFileName == null) {
+			return null;
+		}
+
+		try {
+			return ResourceBundle.getBundle(localizedMessageFileName, locale);
+		}
+		catch (MissingResourceException mex) {
+			return null;
+		}
+	}
 
 	/**
 	 * Get localized message by given resource bundle
@@ -46,6 +93,20 @@ public abstract class CResource {
 		}
 	}
 
+	/**
+	 * Get localized message by given location
+	 * 
+	 * @param locale
+	 *            locale for localization
+	 * @param key
+	 *            text to get localized message for
+	 * 
+	 * @return localized message if configured, key otherwise
+	 */
+	public static String i18n(Locale locale, String key) {
+		return i18n(getBundleForLocale(locale), key);
+	}
+
 	// -------------------------------------------------------------------------
 	// Find Java resource files (in class path)
 	// -------------------------------------------------------------------------
@@ -72,8 +133,7 @@ public abstract class CResource {
 		Enumeration<URL> resources = Thread.currentThread().getContextClassLoader().getResources(fileName);
 		List<File> resourceFiles = new ArrayList<>();
 		while (resources.hasMoreElements()) {
-
-			String resourceFileName = URLDecoder.decode(resources.nextElement().getPath(), StandardCharsets.UTF_8.name());
+			String resourceFileName = URLDecoder.decode(resources.nextElement().getPath(), UTF_8);
 			if (!resourceFileName.contains(".jar!")) {
 				resourceFiles.add(new File(resourceFileName));
 			}
@@ -103,6 +163,118 @@ public abstract class CResource {
 		}
 		else {
 			return resourceFiles.get(0);
+		}
+	}
+
+	// -------------------------------------------------------------------------
+	// Manifest / jar files
+	// -------------------------------------------------------------------------
+
+	/**
+	 * Get manifest attribute
+	 * 
+	 * @param manifest
+	 *            Manifest object
+	 * @param name
+	 *            attribute name
+	 * @param defaultValue
+	 *            default value
+	 * 
+	 * @return attribute value or default value if attribute not set
+	 */
+	public static String getManifestAttr(Manifest manifest, Attributes.Name name, String defaultValue) {
+
+		// null pointer check
+		if (manifest == null) {
+			return defaultValue;
+		}
+
+		// Check main attributes
+		Attributes attrs = manifest.getMainAttributes();
+		if (attrs == null) {
+			return defaultValue;
+		}
+
+		String attrValue = attrs.getValue(name);
+		if (attrValue != null) {
+			return attrValue;
+		}
+
+		// Check manifest entries
+		Map<String, Attributes> mattrs = manifest.getEntries();
+		Iterator<String> it = mattrs.keySet().iterator();
+		while (it.hasNext()) {
+			Attributes eattrs = mattrs.get(it.next());
+			attrValue = eattrs.getValue(name);
+			if (attrValue != null) {
+				return attrValue;
+			}
+		}
+
+		return defaultValue;
+	}
+
+	/**
+	 * Get manifest attribute of a manifest file
+	 * 
+	 * @param manifestFile
+	 *            File object of manifest file
+	 * @param name
+	 *            attribute name
+	 * @param defaultValue
+	 *            default value
+	 * 
+	 * @return attribute value or default value if not set or on IO exception
+	 */
+	public static String getManifestAttr(File manifestFile, Attributes.Name name, String defaultValue) {
+
+		try {
+			Manifest manifest = new Manifest(new FileInputStream(manifestFile));
+			return getManifestAttr(manifest, name, defaultValue);
+		}
+		catch (IOException ex) {
+			return defaultValue;
+		}
+	}
+
+	/**
+	 * Get manifest attribute of a jar file
+	 * 
+	 * @param jarFile
+	 *            File object of jar file
+	 * @param name
+	 *            attribute name
+	 * @param defaultValue
+	 *            default value
+	 * 
+	 * @return attribute value or default value if not set or on IO exception
+	 */
+	public static String getJarManifestAttr(File jarFile, Attributes.Name name, String defaultValue) {
+
+		try (JarFile jar = new JarFile(jarFile)) {
+			Manifest manifest = jar.getManifest();
+			return getManifestAttr(manifest, name, defaultValue);
+		}
+		catch (IOException ex) {
+			return defaultValue;
+		}
+	}
+
+	/**
+	 * Get version info from of manifest file or from jar file
+	 * 
+	 * @param manifestOrJarFile
+	 *            manifest or jar file object
+	 * 
+	 * @return version or 'unknown' if version attribute not set or o on IO exception
+	 */
+	public static String getVersion(File manifestOrJarFile) {
+
+		if (manifestOrJarFile.getName().endsWith(".jar")) {
+			return getJarManifestAttr(manifestOrJarFile, Attributes.Name.IMPLEMENTATION_VERSION, "unknown");
+		}
+		else {
+			return getManifestAttr(manifestOrJarFile, Attributes.Name.IMPLEMENTATION_VERSION, "unknown");
 		}
 	}
 
